--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "chalk": "^2.3.0",
     "get-port": "^3.2.0",
     "ilp-plugin": "^3.0.0",
-    "ilp-protocol-psk2": "^0.2.1",
+    "ilp-protocol-paystream": "git+https://github.com/emschwartz/ilp-protocol-paystream.git",
     "koa": "^2.4.1",
     "localtunnel": "^1.8.3"
   }
