--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js --localtunnel false --port 8080",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
